--- a/Project1_phone_directory/makefile
+++ b/Project1_phone_directory/makefile
@@ -1,2 +1,1 @@
-xzhan211_phone_directory.out : xzhan211_phone_directory.c
-	gcc xzhan211_phone_directory.c -o xzhan211_phone_directory.out
+#Project 1: Phone Directory (Sorting and Searching)
