--- a/Project1_phone_directory/makefile
+++ b/Project1_phone_directory/makefile
@@ -1,1 +1,2 @@
-#Project 1: Phone Directory (Sorting and Searching)
+xzhan211_phone_directory.out : xzhan211_phone_directory.c
+	gcc xzhan211_phone_directory.c -o xzhan211_phone_directory.out
